--- a/index.html
+++ b/index.html
@@ -7,12 +7,106 @@
     <meta name="keywords" content="engineering plastics, high-performance polymers, ABS, PC, PBT, PA6, thermoplastic elastomers, polymer distribution">
     <meta name="author" content="Bonker Plastic Co., Ltd.">
     <title>Bonker Plastic Co., Ltd. | High-Performance Engineering Plastics</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+
+        header p {
+            font-size: 18px;
+            margin-top: 10px;
+        }
+
+        section {
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 1100px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        section h2 {
+            color: #333;
+            font-size: 28px;
+            margin-bottom: 15px;
+        }
+
+        section p {
+            font-size: 16px;
+            color: #555;
+            line-height: 1.7;
+        }
+
+        section ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        section ul li {
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 15px;
+            text-align: center;
+        }
+
+        footer p {
+            font-size: 14px;
+            margin: 5px 0;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 30px;
+            }
+
+            section h2 {
+                font-size: 24px;
+            }
+
+            section p {
+                font-size: 14px;
+            }
+        }
+    </style>
 </head>
 <body>
 
     <header>
         <h1>Bonker Plastic Co., Ltd.</h1>
-        <p>Your trusted distributor for engineering plastics and polymers.</p>
+        <p>Your trusted distributor for engineering plastics and polymers</p>
     </header>
 
     <section>
@@ -45,12 +139,12 @@
         <h2>Contact Us</h2>
         <p>If you're interested in learning more about our products or placing an order, don't hesitate to get in touch with us.</p>
         <p>Email: <a href="mailto:polymer@bak99.com">polymer@bak99.com</a></p>
-        <p>Visit our website: <a href="https://bak99.com">https://bak99.com</a></p>
+        <p>Visit our website: <a href="https://bak99.com" target="_blank">https://bak99.com</a></p>
     </section>
 
     <footer>
         <p>&copy; 2025 Bonker Plastic Co., Ltd. All rights reserved.</p>
-        <p>Follow us on <a href="https://www.facebook.com/bonker.plastics/">Facebook</a></p>
+        <p>Follow us on <a href="https://www.facebook.com/bonker.plastics/" target="_blank">Facebook</a></p>
     </footer>
 
 </body>
